--- a/asset_mobile/css/mobile_footer.css
+++ b/asset_mobile/css/mobile_footer.css
@@ -52,7 +52,7 @@
 
 .mobile_home_contact {
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   margin-top: 1.8rem;
   margin-bottom: 1.8rem;
@@ -137,6 +137,7 @@
   max-width: 550px;
   width: 100%;
   height: 70px;
+  z-index: 1;
 }
 
 .mobile_home_display {
