--- a/asset_mobile/css/mobile_academy.css
+++ b/asset_mobile/css/mobile_academy.css
@@ -2360,6 +2360,23 @@ label {
   -moz-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
+#filter_div{
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: #ffffff !important;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 1px;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+}
+
 .sidenav a {
   padding-left: 1rem;
   padding-bottom: 1rem;
